# hexagon

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  config.yml  vcpkg.json
.gitlab/: ci.yml
docker/: appimage.dockerfile
schema/: config.schema.json
scripts/: config.py  package_appimage.py
src/cpp/: HexagonApplication.cpp  HexagonApplication.hpp  HexagonApplicationInitialize.cpp  HexagonConfig.cpp  HexagonConfig.hpp  Main.cpp
src/cpp/component/: FriendlyResponseComponent.cpp  FriendlyResponseComponent.hpp  IComponent.hpp  MappingComponent.cpp  MappingComponent.hpp  MaxBodyComponent.cpp  MaxBodyComponent.hpp
src/cpp/custom/: HexagonApplicationCustomization.cpp
tls/: www.example.com.crt  www.example.com.pem
vcpkg-ports/sese/: portfile.cmake
